cmake_minimum_required(VERSION 3.8.2)
project(tank)
set(CMAKE_CXX_STANDARD 20)
include_directories(../include ../thirdparty/qwrpc/include)
add_executable(tank internal/bullet.cpp game.cpp internal/game_map.cpp tank-single-player.cpp internal/tank.cpp internal/logger.cpp internal/term.cpp)
add_executable(tank-server tank_server.cpp internal/bullet.cpp game.cpp internal/game_map.cpp internal/tank.cpp internal/logger.cpp internal/term.cpp)
add_executable(tank-client tank_client.cpp internal/bullet.cpp game.cpp internal/game_map.cpp internal/tank.cpp internal/logger.cpp internal/term.cpp)
find_package(Threads REQUIRED)
if (WIN32)
    target_link_libraries(tank-server wsock32 ws2_32 Threads::Threads)
    target_link_libraries(tank-client wsock32 ws2_32 Threads::Threads)
else ()
    target_link_libraries(tank-server Threads::Threads)
    target_link_libraries(tank-client Threads::Threads)
endif ()
