cmake_minimum_required(VERSION 3.8.2)
project(tank)
set(CMAKE_CXX_STANDARD 20)
include_directories(../include ../thirdparty/qwrpc/include)
add_executable(tank internal/bullet.cpp game.cpp internal/game_map.cpp tank.cpp internal/tank.cpp internal/logger.cpp internal/term.cpp internal/cmd_parser.cpp)
